--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "c6website",
+  "name": "c6site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.21.0",
+    "drei": "^2.2.21",
+    "framer-motion": "^7.1.0",
+    "lamina": "^1.1.23",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-icons": "^10.45.0",
+    "three": "^0.143.0",
+    "valtio": "^1.6.3"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.143.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
