--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.21.0",
+    "@react-three/postprocessing": "^2.6.1",
     "drei": "^2.2.21",
     "framer-motion": "^7.1.0",
     "lamina": "^1.1.23",
     "next": "12.2.4",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "styled-icons": "^10.45.0",
     "three": "^0.143.0",
