--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lamina": "^1.1.23",
     "mui": "^0.0.1",
     "next": "12.2.4",
+    "postprocessing": "^6.28.5",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
