--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "shopify-buy": "^2.16.1",
+    "simplex-noise": "^4.0.0",
     "styled-icons": "^10.45.0",
     "three": "^0.143.0",
     "valtio": "^1.6.3"
